[metadata]
name = PyEBL
version = 0.1
author = Disk_MTH
description = A python package to obfuscate, compile and package a python project in order to protect it from reverse engineering
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Disk-MTH/PythonEncryptBuilderLib
project_urls =
    Bug Tracker = https://github.com/Disk-MTH/PythonEncryptBuilderLib/issues
classifiers =
	Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = PyEBL
packages = find:
python_requires = >=2.7

[options.packages.find]
where = PyEBL